@startuml
'https://plantuml.com/class-diagram
hide circle
class DeviceRepository <<interface>>
class UserRepository <<interface>>
class SubscriptionRepository <<interface>>


class Device{
    -macAddress
    -name
    -description
}
class DeviceViewMapper{
    +toDeviceView(Device device): DeviceView
}
class DeviceController{
    create(final CreateDeviceRequest resource, final MultipartFile file):ResponseEntity<DeviceView>
    }
class DeviceService{
 +create(createDeviceRequest resource, DeviceImage deviceImage): Device

}
class CreateDeviceMapper{
    +create(Subscription subscription, CreateDeviceRequest request): Device
}

interface DeviceRepository
{
+findByMacAddress_MacAddress(String macAddress): Optional<Device>
+save(S entity) : <S extends Device>
}

interface UserRepository
{
+findById(Long objectId): Optional<User>
}

interface SubscriptionRepository
{
+findByUser(User user): Optional<Subscriptions>
}


DeviceController ..> DeviceService: uses >
DeviceService ..> DeviceRepository: uses >
DeviceService ..> UserRepository: uses >
DeviceService ..> SubscriptionRepository: uses >
DeviceRepository ..> Device: < record
DeviceService ..> CreateDeviceMapper: uses >
DeviceController ..>DeviceViewMapper: uses >
@enduml
